WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190650
[macOS Debug WK2] Layout Test http/tests/ssl/applepay/ApplePayShippingAddressChangeEventErrorsV3.https.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=190650
Summary
[macOS Debug WK2] Layout Test http/tests/ssl/applepay/ApplePayShippingAddress...
Ryan Haddad
Reported
2018-10-16 16:09:03 PDT
The following layout test is flaky on Mojave and High Sierra Debug WK2 http/tests/ssl/applepay/ApplePayShippingAddressChangeEventErrorsV3.https.html Probable cause: It looks like this test has been flaky since it was added in
https://trac.webkit.org/changeset/236552/webkit
Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fssl%2Fapplepay%2FApplePayShippingAddressChangeEventErrorsV3.https.html
--- /Volumes/Data/slave/mojave-debug-tests-wk2/build/layout-test-results/http/tests/ssl/applepay/ApplePayShippingAddressChangeEventErrorsV3.https-expected.txt +++ /Volumes/Data/slave/mojave-debug-tests-wk2/build/layout-test-results/http/tests/ssl/applepay/ApplePayShippingAddressChangeEventErrorsV3.https-actual.txt @@ -1,3 +1,5 @@ +CONSOLE MESSAGE: Unhandled Promise Rejection: InvalidStateError: The object is in an invalid state. +CONSOLE MESSAGE: Unhandled Promise Rejection: TypeError: Type error Test specifying Apple Pay errors in response to the shippingaddresschange event. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
Attachments
Patch
(4.16 KB, patch)
2018-10-17 16:02 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2018-10-16 16:14:23 PDT
I can reproduce the failure with the following: run-webkit-tests --debug http/tests/ssl/applepay/ApplePayShippingAddressChangeEventErrorsV3.https.html -fg --iter 20 --no-retry
Radar WebKit Bug Importer
Comment 2
2018-10-17 10:13:00 PDT
<
rdar://problem/45341914
>
Andy Estes
Comment 3
2018-10-17 16:02:56 PDT
Created
attachment 352659
[details]
Patch
WebKit Commit Bot
Comment 4
2018-10-24 07:15:22 PDT
Comment on
attachment 352659
[details]
Patch Clearing flags on attachment: 352659 Committed
r237381
: <
https://trac.webkit.org/changeset/237381
>
WebKit Commit Bot
Comment 5
2018-10-24 07:15:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug