[macOS Debug WK2] Layout Test http/tests/ssl/applepay/ApplePayShippingAddressChangeEventErrorsV3.https.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=190650 <rdar://problem/45341914>

Reviewed by Alex Christensen.

Source/WebCore:

In computeErrors, we intend to ignore errors when computing paymentMethodErrors. But we
weren't clearing exceptions generated from calling convert(), so they would end up being
logged as unhandled promise rejections.

Changed ApplePayPaymentHandler::computeErrors() to use a CatchScope to clear exceptions when
decoding paymentMethodErrors.

Also changed ApplePayShippingAddressChangeEventErrorsV3.https.html to catch promise
rejections from calling PaymentRequest.abort().

Covered by existing test.

* Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:
(WebCore::ApplePayPaymentHandler::computeErrors const):

LayoutTests:

* http/tests/resources/payment-request.js:
(updateDetailsOnShippingAddressChange):


Canonical link: https://commits.webkit.org/205728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237381 268f45cc-cd09-0410-ab3c-d52691b4dbfc